# CPP_Tracer

./: Acknowledgements.md  CMakeCache.txt  CMakeLists.txt  CPPBuildAid.py  Makefile  README.md  cmake_install.cmake  includelist.cmake  sourcelist.cmake
include/: Board.hpp  Console.hpp  ConsoleGame.hpp  Direction.hpp  Field.hpp  FieldType.hpp  Pixel.hpp  PixelScreenBuffer.hpp  RGB_Color.hpp  Snake.hpp  Vector2i.hpp
include/components/: boundingBox.hpp  component.hpp  material.hpp  mesh.hpp
include/components/color/: color.hpp  hsv_Color.hpp  rgb_Color.hpp
include/components/colorComponents/: color.hpp  hsv_Color.hpp  rgb_Color.hpp
include/components/material/: material.hpp  materialType.hpp
include/components/materialComponents/: material.hpp  materialType.hpp
include/components/position/: transform.hpp
include/components/positioning/: transform.hpp
include/lib/glad/: glad.h
include/math/: intersectionData.hpp  mat4.hpp  matrix.hpp  ray.hpp  tris.hpp  vec3.hpp  vec4.hpp
include/objects/: camera.hpp  meshObject.hpp  object.hpp  pointLight.hpp  renderableObject.hpp  sphere.hpp  sphereObject.hpp
include/renderer/: camera.hpp  projector.hpp  vertex.hpp  viewport.hpp
include/rendering/: Console.hpp  Pixel.hpp  RGB_Color.hpp  camera.hpp  hsv_Color.hpp  intersectData.hpp  openGLDebug.hpp  projector.hpp  ray.hpp  raytracer.hpp  raytracerCPU.hpp  raytracerGPU.hpp  raytracerIterative.hpp  renderer.hpp  renderingMode.hpp  rgb_Color.hpp  scene.hpp  screenBuffer.hpp  shader.hpp  tris.hpp  vertex.hpp  viewport.hpp
include/rendering/text/: bitmapFont.hpp  (+1 more)
resources/scenes/: CyberScene.xml  SphereScene.xml  TestScene.xml
resources/shaders/: rayTrianglesIntercept.comp  raytracing.comp  raytracingIterative.comp  raytracingRecursive.comp  raytracingSimple.comp  texture.fs
src/: Console.cpp  Pixel.cpp  PixelScreenBuffer.cpp  RGB_Color.cpp  Starter.cpp  starter.cpp
src/components/: boundingBox.cpp  component.cpp  material.cpp  mesh.cpp
src/math/: intersectionData.cpp  mat4.cpp  matrix.cpp  ray.cpp  tris.cpp  vec3.cpp  vec4.cpp
src/objects/: camera.cpp  meshObject.cpp  object.cpp  pointLight.cpp  renderableObject.cpp  shpereObject.cpp  sphere.cpp
src/renderer/: camera.cpp  projector.cpp  vertex.cpp  viewport.cpp
src/rendering/: Console.cpp  Pixel.cpp  RGB_Color.cpp  camera.cpp  hsv_Color.cpp  projector.cpp  ray.cpp  raytracer.cpp  raytracerCPU.cpp  raytracerGPU.cpp  raytracerIterativ.cpp  renderer.cpp  rgb_Color.cpp  scene.cpp  screenBuffer.cpp  shader.cpp  tris.cpp  vertex.cpp  viewport.cpp
(+8 files in other folders)
